--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "homepage": "https://navdeepsingh4298.github.io/To-Do-List-App",
   "main": "src/index.js",
   "dependencies": {
+    "gh-pages": "^3.1.0",
     "react": "16.8.6",
     "react-dom": "16.8.6",
     "react-scripts": "3.2.0"
@@ -14,7 +15,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "gh-pages -d Build"
   },
   "browserslist": [
     ">0.2%",
